--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;700&display=swap"
     rel="stylesheet">
   <script>
     tailwind.config = {
@@ -23,6 +24,7 @@
           },
           fontFamily: {
             sans: ['Inter', 'sans-serif'],
+            mono: ['JetBrains Mono', 'monospace'],
           },
           gridTemplateColumns: {
             '20': 'repeat(20, minmax(0, 1fr))',
@@ -127,7 +129,6 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
     "animejs": "https://esm.sh/animejs@3.2.1",
     "gsap": "https://esm.sh/gsap@3.12.5",
     "gsap/": "https://esm.sh/gsap@3.12.5/"
