feat: Update Development section heading, refine button styling in MetaGoogleAds, and introduce a new blue gradient utility class.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       background: linear-gradient(90deg, #8b5cf6 0%, #7C3AED 100%);
     }
 
+    .blue-gradient {
+      background: linear-gradient(90deg, #38BDF8 0%, #1D4ED8 100%);
+    }
+
     .gold-gradient {
       background: linear-gradient(90deg, #BD9970 0%, #8E6F4B 100%);
     }
