implement GK portfolio page

--- a/index.html
+++ b/index.html
@@ -126,6 +126,19 @@
       width: 200%;
       animation: scroll 30s linear infinite reverse;
     }
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      /* IE and Edge */
+      scrollbar-width: none;
+      /* Firefox */
+    }
   </style>
   <script type="importmap">
 {
