--- a/index.html
+++ b/index.html
@@ -139,6 +139,18 @@
       scrollbar-width: none;
       /* Firefox */
     }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
   </style>
   <script type="importmap">
 {
