--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Podmark | We Create Impact</title>
+  
+  <title>Podmark | Creative Media Production & Impact Agency</title>
+  <meta name="description" content="Podmark is a premier creative agency dedicated to high-impact media production, storytelling, and digital branding. We turn bold ideas into visual reality.">
+  <meta name="keywords" content="Podmark, Media Production, Content Creation, Branding, Creative Agency, Digital Impact">
+  <meta name="author" content="Podmark Team">
+  <link rel="canonical" href="https://podmark.in/" />
+
+  <link rel="icon" type="image/png" href="/images/favicon.png">
+
+  <meta property="og:title" content="Podmark | We Create Impact">
+  <meta property="og:description" content="Discover how Podmark creates visual stories that leave a mark. Explore our portfolio and services.">
+  <meta property="og:image" content="/images/og-image.png">
+  <meta property="og:url" content="https://podmark.in/">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Podmark | We Create Impact">
+  <meta name="twitter:description" content="High-impact creative media production and branding.">
+  <meta name="twitter:image" content="/images/og-image.png">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+  
   <script>
     tailwind.config = {
       theme: {
@@ -33,6 +51,7 @@
       }
     }
   </script>
+
   <style>
     body {
       background-color: #0E0516;
@@ -46,17 +65,9 @@
       -webkit-text-fill-color: transparent;
     }
 
-    .purple-gradient {
-      background: linear-gradient(90deg, #8b5cf6 0%, #7C3AED 100%);
-    }
-
-    .blue-gradient {
-      background: linear-gradient(90deg, #38BDF8 0%, #1D4ED8 100%);
-    }
-
-    .gold-gradient {
-      background: linear-gradient(90deg, #BD9970 0%, #8E6F4B 100%);
-    }
+    .purple-gradient { background: linear-gradient(90deg, #8b5cf6 0%, #7C3AED 100%); }
+    .blue-gradient { background: linear-gradient(90deg, #38BDF8 0%, #1D4ED8 100%); }
+    .gold-gradient { background: linear-gradient(90deg, #BD9970 0%, #8E6F4B 100%); }
 
     .grid-pattern {
       background-image:
@@ -65,15 +76,6 @@
       background-size: 60px 60px;
     }
 
-    .film-strip {
-      background: repeating-linear-gradient(90deg,
-          rgba(139, 92, 246, 0.05),
-          rgba(139, 92, 246, 0.05) 40px,
-          transparent 40px,
-          transparent 80px);
-    }
-
-    /* Navigation Hover Effects */
     .nav-link {
       position: relative;
       overflow: hidden;
@@ -91,9 +93,7 @@
       transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
     }
 
-    .nav-link:hover::after {
-      transform: translateX(0);
-    }
+    .nav-link:hover::after { transform: translateX(0); }
 
     .glass-nav {
       background: rgba(14, 5, 22, 0.85);
@@ -101,18 +101,9 @@
       -webkit-backdrop-filter: blur(12px);
     }
 
-    .cta-glow:hover {
-      box-shadow: 0 0 25px rgba(139, 92, 246, 0.4);
-    }
-
     @keyframes scroll {
-      0% {
-        transform: translateX(0);
-      }
-
-      100% {
-        transform: translateX(-50%);
-      }
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
     }
 
     .animate-marquee {
@@ -121,50 +112,22 @@
       animation: scroll 30s linear infinite;
     }
 
-    .animate-marquee-reverse {
-      display: flex;
-      width: 200%;
-      animation: scroll 30s linear infinite reverse;
-    }
-
-    /* Hide scrollbar for Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
-      display: none;
-    }
-
-    /* Hide scrollbar for IE, Edge and Firefox */
-    .no-scrollbar {
-      -ms-overflow-style: none;
-      /* IE and Edge */
-      scrollbar-width: none;
-      /* Firefox */
-    }
-
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
+    .no-scrollbar::-webkit-scrollbar { display: none; }
+    .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
   </style>
+
   <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "animejs": "https://esm.sh/animejs@3.2.1",
-    "gsap": "https://esm.sh/gsap@3.12.5",
-    "gsap/": "https://esm.sh/gsap@3.12.5/"
-  }
-}
-</script>
-  <link rel="stylesheet" href="/index.css">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@^19.2.3",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "animejs": "https://esm.sh/animejs@3.2.1",
+        "gsap": "https://esm.sh/gsap@3.12.5",
+        "gsap/": "https://esm.sh/gsap@3.12.5/"
+      }
+    }
+  </script>
 </head>
 
 <body class="scroll-smooth">
